<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>shopping-cms-webapp</artifactId>
    <groupId>roosevelt.shopping</groupId>
    <version>2.0.9-SNAPSHOT</version>
  </parent>
  <groupId>roosevelt.content</groupId>
  <artifactId>shared-content</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>shared-content Magnolia Module</name>
  <!--
  <description>Please uncomment and fill in ...</description>
  -->
  <properties>
    <magnoliaVersion>6.3.8</magnoliaVersion>
    <javaVersion>17</javaVersion>
  </properties>

  <dependencies>
    <dependency>
      <groupId>info.magnolia</groupId>
      <artifactId>magnolia-core</artifactId>
      <version>${magnoliaVersion}</version>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.5</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.vaadin</groupId>
      <artifactId>vaadin-server</artifactId>
    </dependency>

    <dependency>
      <groupId>info.magnolia.ui</groupId>
      <artifactId>magnolia-ui-admincentral</artifactId>
    </dependency>
    <dependency>
      <groupId>info.magnolia.pages</groupId>
      <artifactId>magnolia-pages-app</artifactId>
    </dependency>

    <dependency>
      <groupId>info.magnolia.form</groupId>
      <artifactId>magnolia-form</artifactId>
    </dependency>

    <dependency>
      <groupId>info.magnolia.dam</groupId>
      <artifactId>magnolia-dam-jcr</artifactId>
    </dependency>

		<dependency>
			<groupId>info.magnolia.dam</groupId>
			<artifactId>magnolia-dam-app-compatibility</artifactId>
		</dependency>
    
    <dependency>
      <groupId>info.magnolia</groupId>
      <artifactId>magnolia-templating</artifactId>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
    </dependency>

    <dependency>
      <groupId>info.magnolia.definitions</groupId>
      <artifactId>magnolia-definitions-app</artifactId>
    </dependency>
    <dependency>
      <groupId>info.magnolia.site</groupId>
      <artifactId>magnolia-site</artifactId>
    </dependency>

    <dependency>
      <groupId>info.magnolia</groupId>
      <artifactId>magnolia-module-observation</artifactId>
      <version>2.1</version>
    </dependency>

    <dependency>
      <groupId>info.magnolia.activation</groupId>
      <artifactId>magnolia-module-activation</artifactId>
      <version>RELEASE</version>
    </dependency>


    <!-- TEST -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>
       <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <!-- Allow JUnit to access the test classes -->
         <argLine>
          -Xmx1024m -XX:MaxMetaspaceSize=256m
	    	  --add-opens java.base/java.util=ALL-UNNAMED 
          --add-opens java.base/java.lang=ALL-UNNAMED
          </argLine>     
        </configuration>
      </plugin>
    </plugins>

    <!-- default resources configuration which will filter the module descriptor -->
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
      <resource>
        <filtering>true</filtering>
        <directory>src/main/resources</directory>
        <includes>
          <include>META-INF/magnolia/*</include>
        </includes>
      </resource>
    </resources>
  </build>

 <!--  <repositories>
    <repository>
      <id>magnolia.public</id>
      <url>https://nexus.magnolia-cms.com/content/groups/public</url>
      <snapshots>
      </snapshots>
    </repository>
    IF YOU NEED MODULES FROM THE ENTERPRISE VERSION, UNCOMMENT THE FOLLOWING REPOSITORY 
    
    <repository>
      <id>magnolia.enterprise.releases</id>
      <url>https://nexus.magnolia-cms.com/content/repositories/magnolia.enterprise.releases</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    
    <repository>
      <id>vaadin-addons</id>
      <url>https://maven.vaadin.com/vaadin-addons</url>
    </repository>
  </repositories> -->

</project>
